--- a/components/sto-drawer/sto-drawer.component.scss
+++ b/components/sto-drawer/sto-drawer.component.scss
@@ -82,7 +82,7 @@ $header-size: 20px;
   position: absolute;
   top: 0;
   z-index: 1;
-  padding: 0 spacer(2) 0 spacer(4);
+  padding: 0;
   color: $white-light;
   background-color: $black-medium;
   display: flex;
@@ -97,8 +97,14 @@ $header-size: 20px;
 
 .sto-drawer__header{
   display: flex;
-  height: 25px;
+  align-items: center;
   width: 100%;
+
+  .sto-main-icon{
+    height: 40px;
+    width: 40px;
+    margin: 6px 0 0 16px;
+  }
 
   &__title, h1, h2, h3, h4 {
     font-family: 'statoilsans_medium';
@@ -106,29 +112,31 @@ $header-size: 20px;
     font-weight: 500;
     line-height: 24px;
     margin: 0;
+    padding-left: 16px;
   }
 
   &__suffix{
     width: 100%;
     text-align: right;
-
+    min-width: 56px;
     color: rgba(255, 255, 255, 0.87);
   }
 
   &__infix{
-    min-width: 52px;
+    min-width: 56px;
+
     color: rgba(255, 255, 255, 1);
   }
   button.mat-icon-button {
-    height: 24px;
-    width: 24px;
-    line-height: 24px;
+    height: $header-height;
+    width: 56px;
+    line-height: $header-height;
     background-color: transparent;
 
     border: 0;
     outline: none;
     cursor: pointer;
-    :hover{
+    &:hover{
       color: #ccc;
     }
   }
