--- a/components/sto-navigation/_sto-navigation.scss
+++ b/components/sto-navigation/_sto-navigation.scss
@@ -1,5 +1,12 @@
 .mat-list{
+
+
+
   &.sto-navigation {
+  .mat-button-focus-overlay{
+    background-color: rgba(0,0,0,0.06);
+  }
+
     .mat-subheader{
       font-size: 13px;
       color: rgba(0,0,0,0.54);
@@ -15,6 +22,8 @@
         line-height: 48px;
         font-size: 13px;
         font-weight: 500;
+
+
       }
       padding: 0;
       cursor: pointer;
@@ -27,10 +36,12 @@
 
       .sto-navigation__suffix{
         padding: 12px 0;
-        margin-right: 8px;
+        margin-right: 16px;
         float: right;
         line-height: 0;
         .mat-icon{
+          padding: 0;
+          width: 24x;
           color: rgba(0, 0, 0, 0.38);
         }
 
@@ -40,7 +51,7 @@
         padding: 0;
       }
       .mat-icon {
-        padding: 0px 24px 0px 16px;
+        padding: 0px 32px 0px 16px;
         color: rgba(0,0,0,0.54);
         line-height: 24px;
         svg{
