--- a/ngx-stoui.scss
+++ b/ngx-stoui.scss
@@ -202,3 +202,20 @@ To make an icon appear as a button
   cursor: pointer;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+  height:10px;
+  background-color: $white-light;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $gray-medium;
+  &:hover {
+    background-color: $gray-light;
+  }
+  outline: 1px solid slategrey;
+}
